Fix invisible combobox text on some browsers

--- a/tapiriik/web/static/css/style.css
+++ b/tapiriik/web/static/css/style.css
@@ -330,6 +330,10 @@ a img {
 	border:none;
 }
 
+select option {
+	color: black;
+}
+
 p.infotip {
 	color: #777;
 	margin-top: 10px;
